# ipc-tuples

./: CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  test.c  test.h
example/fw/: CMakeLists.txt  stream-generated-ipc.c  stream.c  stream.h
example/shared/: classes.h  stream.h
example/sw/: CMakeLists.txt  stream-generated-ipc.c  stream.c  stream.h
include/abi/: header.h  manifest.h  message.h
include/ipct/: builder.h  client.h
include/private/: header.h  message.h
src/: CMakeLists.txt  client.c  debug.h  pack.c  priv.h  unpack.c
